src/objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>Field_1__c</fullName>
        <label>Field 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_2__c</fullName>
        <label>Field 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_3__c</fullName>
        <label>Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Promotion</label>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>